--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
     "@types/body-parser": "1.16.4",
+    "@types/connect-mongo": "^0.0.33",
     "@types/cors": "2.8.1",
     "@types/csv-parse": "^1.1.8",
     "@types/express": "^4.0.36",
