Convert all routers to classes

--- a/backend/config.yml
+++ b/backend/config.yml
@@ -1,9 +1,9 @@
 ---
 recaptchaSiteKey: "changeme"
 recpatchaSecretKey: "changeme"
-motto_suggestions:
+mottoSuggestions:
   enabled: true
-teamer_registration:
+teamerRegistration:
   enabled: true
-teamer_trip:
+teamerTrip:
   enabled: true
