--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,7 @@
     "@types/jasmine": "2.5.53",
     "@types/jquery": "^3.2.8",
     "@types/node": "~8.0.13",
-    "codelyzer": "~3.1.2",
+    "codelyzer": "^3.1.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -56,7 +56,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.1",
     "ts-node": "~3.2.0",
-    "tslint": "~5.5.0",
+    "tslint": "^5.5.0",
     "typescript": "~2.4.1"
   }
 }
