--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^1.2.0",
     "@angular/common": "^4.1.3",
     "@angular/compiler": "^4.1.3",
     "@angular/core": "^4.1.3",
@@ -34,10 +33,10 @@
     "ng-recaptcha": "^2.1.1",
     "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.3.1",
-    "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.11"
   },
   "devDependencies": {
+    "@angular/cli": "v1.3.0-rc.0",
     "@angular/compiler-cli": "^4.1.3",
     "@angular/language-service": "^4.1.3",
     "@types/datatables.net": "^1.10.1",
