--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,12 +13,17 @@
       "node_modules/@types"
     ],
     "lib": [
-      "es2016",
+      "es2017",
       "dom"
     ],
     "skipLibCheck": true
   },
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "paths": {
+    "@angular/*": [
+      "../node_modules/@angular/*"
+    ]
+  }
 }
