--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.1.3",
-    "@angular/compiler": "^4.1.3",
-    "@angular/core": "^4.1.3",
-    "@angular/forms": "^4.1.3",
-    "@angular/http": "^4.1.3",
-    "@angular/platform-browser": "^4.1.3",
-    "@angular/platform-browser-dynamic": "^4.1.3",
-    "@angular/router": "^4.1.3",
+    "@angular/common": "^4.3.1",
+    "@angular/compiler": "^4.3.1",
+    "@angular/core": "^4.3.1",
+    "@angular/forms": "^4.3.1",
+    "@angular/http": "^4.3.1",
+    "@angular/platform-browser": "^4.3.1",
+    "@angular/platform-browser-dynamic": "^4.3.1",
+    "@angular/router": "^4.3.1",
     "angular-datatables": "^4.1.1",
-    "angulartics2": "^2.2.1",
+    "angulartics2": "^2.2.2",
     "bootstrap": "next",
     "core-js": "^2.4.1",
     "datatables.net": "^1.10.15",
@@ -31,31 +31,31 @@
     "datatables.net-buttons-bs": "^1.3.1",
     "jquery": "^3.2.1",
     "ng-recaptcha": "^2.1.1",
-    "ngx-bootstrap": "^1.6.6",
-    "rxjs": "^5.3.1",
-    "zone.js": "^0.8.11"
+    "ngx-bootstrap": "^1.8.0",
+    "rxjs": "^5.4.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "v1.3.0-rc.0",
-    "@angular/compiler-cli": "^4.1.3",
-    "@angular/language-service": "^4.1.3",
-    "@types/datatables.net": "^1.10.1",
+    "@angular/cli": "^v1.3.0-rc.3",
+    "@angular/compiler-cli": "^4.3.1",
+    "@angular/language-service": "^4.3.1",
+    "@types/datatables.net": "^1.10.5",
     "@types/grecaptcha": "^2.0.33",
     "@types/jasmine": "2.5.53",
-    "@types/jquery": "^3.2.8",
-    "@types/node": "~8.0.13",
+    "@types/jquery": "^3.2.9",
+    "@types/node": "~8.0.17",
     "codelyzer": "^3.1.2",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
+    "jasmine-core": "~2.6.4",
+    "jasmine-spec-reporter": "~4.1.1",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.1",
+    "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "^5.5.0",
-    "typescript": "~2.4.1"
+    "typescript": "~2.4.2"
   }
 }
